@@ -1,3 +1,7 @@
+2014-05-14 Jens Thoms Toerring    <jt@toerring.de>
+
+	* lib/spinner.c: Bug in handling of FL_FLOAT_SPINNER fixed.
+
 2014-05-06 Jens Thoms Toerring    <jt@toerring.de>
 
 	* lib/xyplot.c: fl_set_xyplot_mouse_buttons() and
